--- a/src/app/layout/app/App.styles.css
+++ b/src/app/layout/app/App.styles.css
@@ -1,10 +1,8 @@
 p, span, div{
   font-family: 'Roboto', sans-serif;
-  font-size:12pt;
 }
 h1,h2,h3,h4,h5,h6{
-  font-family: "Closer", sans-serif;
-  font-size:14pt;
+  font-family: "Closer Text", sans-serif;
 }
 
 
