--- a/src/pages/SlickSlider/SliderItems/SourcesSliderItem/SourcesSliderItem.styles.css
+++ b/src/pages/SlickSlider/SliderItems/SourcesSliderItem/SourcesSliderItem.styles.css
@@ -1,12 +1,15 @@
 .sourcesSliderItem{
+    background-image: url("/src/assets/images/Articles.png");
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     height:250px;
     width:380px;
     border-radius: 30px;
-    outline: 1px solid red;
 }
-.slick-next{
-    background: red;
-}
-.slick-prev{
-    background: red;
+
+.sourcesSliderItem h1{
+    color:white;
+    font-weight: 500;
 }
