--- a/src/pages/BlockHeading/BlockHeading.styles.css
+++ b/src/pages/BlockHeading/BlockHeading.styles.css
@@ -6,7 +6,7 @@
     justify-content: center;
 }
 
-.blockHeadingContainer img{
+.blockHeadingContainer_img{
     z-index: 0;
     margin-left: -62px;
 }
