--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -19,3 +19,8 @@ $copyright-section-color: #C4C4C4;
 
 $selected-arrow-color: #C4C4C4;
 $base-arrow-color: #F2F2F2;
+
+$scrollbar-thumb-color: #891C1B !important;
+$scrollbar-track-color: #C9C5C2 !important;
+
+$ant-menu-color: #E13F30 !important;
