--- a/src/assets/sass/variables/_variables.fonts.scss
+++ b/src/assets/sass/variables/_variables.fonts.scss
@@ -3,5 +3,5 @@ $body-tag-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen
 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
 sans-serif;
 
-$roboto-font: 'Roboto', 'Helvetica Neue', sans-serif;
+$roboto-font: 'Roboto', 'Helvetica Neue', sans-serif !important;
 $closer-text-font: 'Closer Text', $roboto-font;
