--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -1,8 +1,8 @@
-$pure-white-color: #FFFFFF;
-$pure-black-color: #000000;
+$pure-white-color: #FFFFFF !important;
+$pure-black-color: #000000 !important;
 $lighter-black-color: #1D1F23;
 
-$accented-gray-color: #F4F4F4;
+$accented-gray-color: #F4F4F4 !important;
 $lighter-gray-color: #D3CDCA;
 $darker-gray-color: #5D5D5D;
 $dark-gray-color: #4D4D4D;
