--- a/src/index.scss
+++ b/src/index.scss
@@ -27,4 +27,9 @@ body,
 
 ul, ol {
   list-style: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 0;
 }
