Optimized font-face definitions with the use of special mixin.

--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -119,7 +119,7 @@
 }
 
 // --------------------------Fonts---------------------------------
-@mixin font-faced($font-family: ft.$roboto-font, $font-style: normal,
+@mixin with-font($font-family: ft.$roboto-font, $font-style: normal,
                   $font-weight: normal, $font-size: 16px) {
   font-family: $font-family;
   // px equivalent for browsers without rem support
@@ -133,4 +133,39 @@
   font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@mixin font-face(
+  $font-family,
+  $file-path,
+  $font-weight: normal,
+  $font-style: normal,
+  $fallback: sans-serif
+) {
+  $file-path: '@assets/fonts/#{$file-path}';
+
+  @font-face {
+    font-family: '#{$font-family}';
+
+    src: url($file-path + '.eot');
+    src: local($file-path),
+      url($file-path + '.eot?#iefix') format('embedded-opentype'),
+      url($file-path + '.woff2') format('woff2'),
+      url($file-path + '.woff') format('woff');
+
+    font-weight: $font-weight;
+    font-style: $font-style;
+    font-display: swap;
+  }
+
+  %#{$font-family} {
+    font: {
+      @if $fallback != '' {
+        family: '#{$font-family}', #{$fallback};
+      } @else {
+        family: '#{$font-family}';
+        weight: $font-weight;
+      }
+    }
+  }
 }
