--- a/src/features/BlockHeading/BlockHeading.styles.scss
+++ b/src/features/BlockHeading/BlockHeading.styles.scss
@@ -15,7 +15,7 @@
 
 .blockHeadingContainer h1 {
     @include mut.positioned-as(relative, $left: -62px, $top: 41px);
-    @include mut.font-faced(ft.$closer-text-font, $font-weight: 500, $font-size: 40px);
+    @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 40px);
 }
 
 .blockHeadingContainer {
