--- a/src/components/QRBlock/QR.styles.scss
+++ b/src/components/QRBlock/QR.styles.scss
@@ -1,9 +1,57 @@
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@assets/sass/_utils.functions.scss" as *;
+@use "@assets/sass/variables/_variables.fonts.scss" as fonts;
+@use "@assets/sass/variables/_variables.colors.scss" as colors;
 
 .QRBlockContainer {
     width: 100%;
     height: pxToRem(779px);
-    @include mut.outlined();
     @include mut.bg-image("/src/assets/images/QRbackground.png");
+    @include mut.flexed(column,center,flex-start);
+    @include mut.rem-padded(134px, 0, 0, 0)
+}
+
+.QRBlockContent{
+    width:pxToRem(855px);
+    height:pxToRem(608px);
+    @include mut.flexed(row,center,center);
+}
+
+.QRBlockImg{
+    width:326px/822px;
+    height:100%;
+    @include mut.flexed(column, center, center);
+    @include mut.rem-padded(0,0,0,31px);
+}
+.QRBlockText{
+    width:61.4%;
+    height:100%;
+    @include mut.flexed(column, flex-end, center);
+
+    h1{
+        @include mut.font-faced(fonts.$closer-text-font, normal, 500, 30px);
+        @include mut.rem-padded(0,0,0,14px);
+        @include mut.rem-margined(2px,0,0,0);
+        color: colors.$accented-red-color;
+    }
+    p{
+        @include mut.font-faced(fonts.$roboto-font, normal, 200, 20px);
+        @include mut.rem-padded(0,0,0,14px);
+        @include mut.rem-margined(22px,0,0,0);
+        color: colors.$lighter-black-color;
+    }
+    .p_bold {
+        @include mut.font-faced(fonts.$roboto-font, normal, 500, 24px);
+        @include mut.rem-padded(0,0,0,14px);
+        color: colors.$lighter-black-color;
+        margin-top: pxToRem(33px) !important;
+    }
+    img{
+        @include mut.rem-margined(36px, 0, 0, 14px);
+    }
+}
+
+.QRBlockTextWrapper{
+    width:pxToRem(405px);
+    height:pxToRem(491px);
 }
