--- a/src/components/QRBlock/QR.styles.scss
+++ b/src/components/QRBlock/QR.styles.scss
@@ -7,51 +7,51 @@
     width: 100%;
     height: pxToRem(779px);
     @include mut.bg-image("/src/assets/images/QRbackground.png");
-    @include mut.flexed(column,center,flex-start);
-    @include mut.rem-padded(134px, 0, 0, 0)
+    @include mut.flexed(column, center, flex-start);
+    @include mut.rem-padded($top:134px)
 }
 
-.QRBlockContent{
+.QRBlockContent {
     width:pxToRem(855px);
     height:pxToRem(608px);
-    @include mut.flexed(row,center,center);
+    @include mut.flex-centered(row);
+    @include mut.rem-margined($left:-7px);
 }
 
-.QRBlockImg{
-    width:326px/822px;
+.QRBlockImg {
     height:100%;
-    @include mut.flexed(column, center, center);
-    @include mut.rem-padded(0,0,0,31px);
+    @include mut.flex-centered(column);
+    @include mut.rem-padded($left:31px);
 }
-.QRBlockText{
+
+.QRBlockText {
     width:61.4%;
     height:100%;
     @include mut.flexed(column, flex-end, center);
-
-    h1{
+    h1 {
         @include mut.font-faced(fonts.$closer-text-font, normal, 500, 30px);
-        @include mut.rem-padded(0,0,0,14px);
-        @include mut.rem-margined(2px,0,0,0);
+        @include mut.rem-padded($left:14px);
+        @include mut.rem-margined($top:2px);
         color: colors.$accented-red-color;
     }
-    p{
+    p {
         @include mut.font-faced(fonts.$roboto-font, normal, 200, 20px);
-        @include mut.rem-padded(0,0,0,14px);
-        @include mut.rem-margined(22px,0,0,0);
+        @include mut.rem-padded($left:14px);
+        @include mut.rem-margined($top:22px);
         color: colors.$lighter-black-color;
     }
-    .p_bold {
+    .pBold {
         @include mut.font-faced(fonts.$roboto-font, normal, 500, 24px);
-        @include mut.rem-padded(0,0,0,14px);
+        @include mut.rem-padded($left:14px);
         color: colors.$lighter-black-color;
         margin-top: pxToRem(33px) !important;
     }
-    img{
+    img {
         @include mut.rem-margined(36px, 0, 0, 14px);
     }
 }
 
-.QRBlockTextWrapper{
+.QRBlockTextWrapper {
     width:pxToRem(405px);
     height:pxToRem(491px);
 }
