--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -48,7 +48,10 @@
   justify-content: center;
   align-items: center;
 }
-
+@mixin flex-centered-in-width {
+  display: flex;
+  justify-content: center;
+}
 @mixin absolute-centered($axes) {
   position: absolute;
 
