--- a/src/features/SlickSlider/SliderItems/RelatedFigureSliderItem/RelatedFigureSliderItem.styles.scss
+++ b/src/features/SlickSlider/SliderItems/RelatedFigureSliderItem/RelatedFigureSliderItem.styles.scss
@@ -8,7 +8,7 @@
     height: pxToRem(380px);
 
     box-sizing: border-box;
-    //border: 3px solid c.$pure-white-color;
+    border: 3px solid c.$pure-white-color;
     border-radius: 30px;
 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -19,26 +19,21 @@
 
     cursor: pointer;
 
-    .slideImage {
-        width: 100%;
-        height: 100%;
-
-        z-index: 0;
-    }
-
     .slideText {
         width: 272px;
         height: 68px;
 
         background-color: c.$dark-red-color;
 
-        z-index: 1;
+        display: flex;
+        align-items: center;
+
         position: absolute;
         top: 286px;
 
         .heading {
             width: 100%;
-            height: 100%;
+            height: 64px;
 
             text-align: left;
             color: c.$pure-white-color;
@@ -52,5 +47,25 @@
             padding-left: 32.06px;
             padding-right: 15.37px;
         }
+    }
+}
+
+.relatedFigureSlide:hover {
+    height: 452px;
+
+    .slideText{
+        height: 169px;
+
+        border-radius: 0 0 30px 30px;
+
+        align-items: flex-start;
+
+        position: inherit;
+        top: 0;
+        align-self: flex-end;
+    }
+
+    .heading{
+        padding-top: 6px;
     }
 }
