--- a/src/features/SlickSlider/SliderItems/RelatedFigureSliderItem/RelatedFigureSliderItem.styles.scss
+++ b/src/features/SlickSlider/SliderItems/RelatedFigureSliderItem/RelatedFigureSliderItem.styles.scss
@@ -27,9 +27,11 @@
 
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
 
         position: absolute;
         top: 286px;
+        z-index: 0;
 
         .heading {
             width: 100%;
@@ -46,6 +48,36 @@
             align-items: center;
             padding-left: 32.06px;
             padding-right: 15.37px;
+        }
+
+        .tag {
+            width: auto;
+            height: 38px;
+            border-radius: 11px;
+            padding: 9px 12px 9px 12px;
+
+
+            background-color: c.$dark-red-color;
+            border: 2px solid c.$pure-white-color;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            z-index: 1;
+
+            p {
+                width: auto;
+                height: 20px;
+
+                font-family: f.$roboto-font;
+                font-style: normal;
+                text-align: center;
+                color: c.$pure-white-color;
+                font-weight: 500;
+                font-size: 15px;
+                line-height: 135.69%;
+            }
         }
     }
 }
