Added basic layout for 'Sources' block on the main page.

--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -1,5 +1,5 @@
 $pure-white-color: #FFFFFF !important;
-$pure-black-color: #000000 !important;
+$pure-black-color: #000000;
 $lighter-black-color: #1D1F23;
 
 $accented-gray-color: #F4F4F4 !important;
