--- a/src/components/QRBlock/QR.styles.scss
+++ b/src/components/QRBlock/QR.styles.scss
@@ -3,55 +3,60 @@
 @use "@assets/sass/variables/_variables.fonts.scss" as fonts;
 @use "@assets/sass/variables/_variables.colors.scss" as colors;
 
+$QRBgImg: "/src/assets/images/QRbackground.png";
+
 .QRBlockContainer {
-    width: 100%;
-    height: pxToRem(779px);
-    @include mut.bg-image("/src/assets/images/QRbackground.png");
+    @include mut.sized(100%, 779px);
+    @include mut.bg-image($QRBgImg);
     @include mut.flexed(column, center, flex-start);
-    @include mut.rem-padded($top:134px)
+    padding-top: pxToRem(134px);
 }
 
 .QRBlockContent {
-    width:pxToRem(855px);
-    height:pxToRem(608px);
+    @include mut.sized(855px, 608px);
     @include mut.flex-centered(row);
-    @include mut.rem-margined($left:-7px);
+    margin-left: pxToRem(-7px);
 }
 
 .QRBlockImg {
-    height:100%;
+    height: 100%;
     @include mut.flex-centered(column);
-    @include mut.rem-padded($left:31px);
+    padding-left: pxToRem(31px);
 }
 
 .QRBlockText {
-    width:61.4%;
-    height:100%;
+    @include mut.sized(61%, 100%);
     @include mut.flexed(column, flex-end, center);
+
     h1 {
-        @include mut.font-faced(fonts.$closer-text-font, normal, 500, 30px);
-        @include mut.rem-padded($left:14px);
-        @include mut.rem-margined($top:2px);
+        @include mut.with-font(fonts.$closer-text-font, $font-weight: 500, $font-size: 30px);
         color: colors.$accented-red-color;
+
+        padding-left: pxToRem(14px);
+        margin-top: pxToRem(2px);
     }
+
     p {
-        @include mut.font-faced(fonts.$roboto-font, normal, 200, 20px);
-        @include mut.rem-padded($left:14px);
-        @include mut.rem-margined($top:22px);
+        @include mut.with-font($font-weight: 200, $font-size: 20px);
         color: colors.$lighter-black-color;
+
+        padding-left: pxToRem(14px);
+        margin-top: pxToRem(22px);
     }
+
     .pBold {
-        @include mut.font-faced(fonts.$roboto-font, normal, 500, 24px);
-        @include mut.rem-padded($left:14px);
+        @include mut.with-font($font-weight: 500, $font-size: 24px);
         color: colors.$lighter-black-color;
+
+        padding-left: pxToRem(14px);
         margin-top: pxToRem(33px) !important;
     }
+
     img {
         @include mut.rem-margined(36px, 0, 0, 14px);
     }
 }
 
 .QRBlockTextWrapper {
-    width:pxToRem(405px);
-    height:pxToRem(491px);
+    @include mut.sized(405px, 491px);
 }
