--- a/src/features/SlickSlider/SliderItems/RelatedFigureSliderItem/RelatedFigureSliderItem.styles.scss
+++ b/src/features/SlickSlider/SliderItems/RelatedFigureSliderItem/RelatedFigureSliderItem.styles.scss
@@ -51,7 +51,7 @@
             padding-right: 15.37px;
         }
 
-        .tag-list{
+        .tagList{
             width: 100%;
             visibility: hidden;
 
@@ -113,7 +113,7 @@
             padding-top: 6px;
         }
 
-        .tag-list{
+        .tagList{
             visibility: visible;
         }
     }
